--- a/plugins/SitesManager/templates/sites-list/site-fields.html
+++ b/plugins/SitesManager/templates/sites-list/site-fields.html
@@ -14,6 +14,12 @@
 
         <br/>
         <br/>
+        <div class="typeSettings"
+             ng-include="'?module=SitesManager&action=getCustomTypeSettings&idSite=' + site.idsite"
+                ></div>
+
+        <br/>
+        <br/>
 
         <input type="submit" class="submit" value="{{ 'General_Save' | translate }}" ng-click="saveSite()"/>
 
@@ -85,9 +91,9 @@
 </td>
 
 <td
-    sites-manager-edit-trigger
-    ng-include="'plugins/SitesManager/templates/sites-list/site-search-field.html'"
-    ng-switch="site.editMode">
+        sites-manager-edit-trigger
+        ng-include="'plugins/SitesManager/templates/sites-list/site-search-field.html'"
+        ng-switch="site.editMode">
 </td>
 
 <td ng-switch="site.editMode" sites-manager-edit-trigger>
