--- a/plugins/SitesManager/templates/sites-list/site-fields.html
+++ b/plugins/SitesManager/templates/sites-list/site-fields.html
@@ -15,7 +15,7 @@
         <br/>
         <br/>
         <div class="typeSettings"
-             ng-include="'?module=SitesManager&action=getCustomTypeSettings&idSite=' + site.idsite"
+             ng-include="'?module=SitesManager&action=getCustomTypeSettings&idSite=' + site.idsite + '&idType=' + site.type"
                 ></div>
 
         <br/>
